<resources>
    <string name="app_name">carService</string>
    <string name="text_customer_btn">Клиент</string>
    <string name="text_employee_btn">Сотрудник</string>
    <string name="text_admin_btn">Администратор</string>
    <string name="text_splash_screen_tv">Автосервисник</string>
    <string name="hint_email_edit_text">Email</string>
    <string name="hint_password_edit_text">Пароль</string>
    <string name="text_sign_in_btn">Войти</string>
    <string name="hint_brand_ET">Марка</string>
    <string name="hint_model_ET">Модель</string>
    <string name="hint_production_year_ET">Год выпуска</string>

    <string-array name="carList">
        <item>BMW</item>
        <item>LADA</item>
        <item>MERCEDES</item>
        <item>KIA</item>
    </string-array>
    <string name="text_name_text_view">Иванов И.И.</string>
    <string name="text_desc_text_view">Категория: А</string>
    <string name="text_hint_name_branch">Название</string>
    <string name="text_address_name_branch">Адрес</string>
    <string name="text_phone_name_branch">Телефон</string>
    <string name="text_save_branch_btn">Сохранить</string>
    <string name="text_delete_branch_btn">Удалить</string>
    <string name="url_database">https://carservice-93ef9-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="branch_firebase_key">branch</string>
    <string name="services_firebase_key">services</string>
    <string name="FIREBASE_LOG_TAG">FIREBASE_LOG_TAG</string>
    <string name="employees_firebase_key">employees</string>
    <string name="user_data_sharedPreference">user_data</string>
    <string name="ROLE_SHARED_PREFERENCE_KEY">ROLE</string>
    <string name="user_id_key_SP">USER_ID</string>
    <string name="user_role_key_SP">ROLE</string>
    <string name="user_name_key_SP">Name</string>
    <string name="user_phone_key_SP">Phone</string>
    <string name="text_hint_name_employee">Имя</string>
    <string name="text_hint_lastname_employee">Фамилия</string>
    <string name="text_hint_patronymic_employee">Отчество</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_exit">выход</string>
    <string name="textedit">изменить</string>
    <string name="text_delete_token_btn">Удалить запись</string>
    <string name="text_services_TV">Замена масла\nЗамена свечей</string>
    <string name="text_title_Services_TV">Услуги:</string>
    <string name="text_car_TV">BMW M6 A333VV 73</string>
    <string name="text_title_cat_TV">Автомобиль:</string>
    <string name="text_employee_TV">Иванов И.И</string>
    <string name="text_title_employee_tV">Сотрудник:</string>
    <string name="text_branch_TV">Сигнал\nг. Ульяновск ул.Шолмова д.18\n89654123456</string>
    <string name="text_title_branch_TV">Компания:</string>
    <string name="text_date_time_TV">27.04.2022 15:19 - 28.04.2022 18:00</string>
    <string name="text_title_dateTime_TV">Время выполнения услуги:</string>
    <string name="text_save_btn">Сохранить</string>
    <string name="text_title_price_service">Стоимость:</string>
    <string name="text_title_name_service_TV">Название услуги:</string>
    <string name="text_title_hours_service_TV">Количество часов:</string>
    <string name="text_delete_Btn">Удалить</string>
    <string name="text_title_price_tV">Стоимость:</string>
    <string name="text_price_tV">10000 руб.</string>
    <string name="desc_icon_image_view">icon</string>
    <string name="text_message_null_token_TV">Нет записей</string>
    <string name="text_title_phone_TV">Телефон:</string>
    <string name="text_phone_tv">89123456789</string>
    <string name="text_full_name_tv">Иванов Иван Иванович</string>
    <string name="text_prev_week_btn">Предыдущая \nнеделя</string>
    <string name="text_next_week_btn">Следующая \nнеделя</string>
    <string name="text_title_TV">Статус:</string>
    <string name="text_title_start_date_time_TV">Начало:</string>
    <string name="text_title_end_date_time_TV">Окончание:</string>
    <string name="text_registration_btn">Зарегистрироваться</string>
    <string name="text_hint_name_ed_auth">Название</string>
    <string name="text_title_or_tv">Или</string>
    <string name="text_title_name_service_tv">Название:</string>
    <string name="text_add_textView">Добавить</string>
    <string name="text_title_branch_text_view">Филиалы</string>
    <string name="text_titleEmployees_text_view">Сотрудники:</string>
    <string name="text_title_services_text_view">Услуги</string>
    <string name="text_menu_item_profile">Профиль</string>
    <string name="text_menu_item_list_services">Услуги</string>
    <string name="text_title_start_time">Начало рабочего дня:</string>
    <string name="text_title_end_time_text_view">Окончание рабочего дня:</string>
    <string name="text_menu_save">Сохранить</string>
    <string name="text_menu_delete">удалить</string>
    <string name="text_hint_employee_edit_text">Email</string>
    <string name="text_hint_emplyee_edit_text">Пароль</string>
    <string name="text_item_menu_list_token">Записи</string>
    <string name="text_title_cars">Автомобили</string>
    <string name="text_title_select_car_title">Выберите автомобиль</string>
    <string name="text_title_select_branch">Выберите автосервис</string>
    <string name="text_title_select_service_text_view">Выберите услуги</string>
    <string name="text_select_text_view">Выберите время записи</string>
    <string name="text_title_select_employee_text_view">Выберите сотрудника</string>
    <string name="text_hint_make_car">Марка</string>
    <string name="text_hint_model_car">Модель</string>
    <string name="text_number_car">Номер</string>
    <string name="text_hint_year_car">Год выпуска</string>
    <string name="text_title_category_services">Категория услуг</string>
    <string name="text_title_categories_services">Категории услуг</string>
    <string name="text_name_category_TEXT_view">Название категории</string>
    <string name="text_title_category_employee">Категория оказываемых услуг</string>
    <string name="text_title_select_category">Выберите категорию услуг</string>
    <string name="text_change_categories">Изменить</string>
    <string name="title_complete_text_view">Выполнение:</string>
    <string name="title_complete_services">Выполнение:</string>
    <string name="text_btn_enroll">Записаться</string>
    <string name="show_complete_token">Показать завершённые</string>
</resources>