<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/branch_sm_8dp"
    android:layout_marginEnd="@dimen/branch_em_8dp"
    tools:context=".TokenDetailFragment">


    <TextView
        android:id="@+id/titleDateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/branch_mt_8dp"
        android:text="@string/text_title_dateTime_TV"
        android:theme="@style/titleTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_date_time_TV"
        android:theme="@style/valueTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDateTimeTextView" />

    <TextView
        android:id="@+id/titleBranchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_branch_TV"
        android:theme="@style/titleTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeTextView" />

    <TextView
        android:id="@+id/branchTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_branch_TV"
        android:theme="@style/valueTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBranchTextView" />

    <TextView
        android:id="@+id/titleEmployeeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_employee_tV"
        android:theme="@style/titleTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branchTextView" />

    <TextView
        android:id="@+id/employeeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_employee_TV"
        android:theme="@style/valueTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEmployeeTextView" />

    <TextView
        android:id="@+id/titleCarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_cat_TV"
        android:theme="@style/titleTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeTextView" />

    <TextView
        android:id="@+id/carTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_car_TV"
        android:theme="@style/valueTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCarTextView" />

    <TextView
        android:id="@+id/titleServicesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title_Services_TV"
        android:theme="@style/titleTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carTextView" />

    <TextView
        android:id="@+id/servicesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_services_TV"
        android:theme="@style/valueTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleServicesTextView" />

    <Button
        android:id="@+id/deleteTokenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_delete_token_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicesTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>