<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmployeePageFragment">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iconEmployeeImageView"
            android:layout_width="@dimen/width_icon_user"
            android:layout_height="@dimen/width_icon_user"
            android:contentDescription="@string/desc_icon_image_view"
            android:src="@drawable/ic_baseline_engineering_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/branch_sm_8dp"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:textSize="24sp"
            android:theme="@style/valueTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconEmployeeImageView"
            tools:text="@string/text_full_name_tv" />

        <View
            android:id="@+id/selection"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:background="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@id/phoneTextView" />

        <Button
            android:id="@+id/prevWeekButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:enabled="false"
            android:text="@string/text_prev_week_btn"
            app:layout_constraintEnd_toStartOf="@id/nextWeekButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selection" />

        <Button
            android:id="@+id/nextWeekButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:text="@string/text_next_week_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/prevWeekButton"
            app:layout_constraintTop_toBottomOf="@+id/selection" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tokenRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/branch_sm_8dp"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:layout_marginEnd="@dimen/branch_em_8dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/nextWeekButton" />

        <ProgressBar
            android:id="@+id/employeeProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prevWeekButton" />

        <TextView
            android:id="@+id/messageNullTokenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_message_null_token_TV"
            android:theme="@style/titleTheme"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextWeekButton" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/branch_sm_8dp"
            android:theme="@style/valueTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePhoneTextView"
            tools:text="@string/text_phone_tv" />

        <TextView
            android:id="@+id/titlePhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/branch_sm_8dp"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:text="@string/text_title_phone_TV"
            android:theme="@style/titleTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>