<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/branch_sm_8dp"
        android:layout_marginEnd="@dimen/branch_em_8dp"
        tools:context=".DetailBranchFragment">


        <EditText
            android:id="@+id/nameBranchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/text_hint_name_branch"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="230dp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:autofillHints="postalAddress"
            android:ems="10"
            android:hint="@string/text_address_name_branch"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameBranchEditText" />

        <EditText
            android:id="@+id/phoneBranchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/text_phone_name_branch"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/addressEditText"
            tools:layout_editor_absoluteX="57dp" />

        <Button
            android:id="@+id/saveBranchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:text="@string/text_save_branch_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endTimeTimePicker" />

        <Button
            android:id="@+id/deleteBranchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/branch_mt_8dp"
            android:text="@string/text_delete_branch_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveBranchButton" />

        <TimePicker
            android:id="@+id/startTimeTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"

            app:layout_constraintTop_toBottomOf="@+id/titleStartTimeTextView" />

        <TextView
            android:id="@+id/titleStartTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Начало рабочего дня:"
            android:theme="@style/titleTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneBranchEditText" />

        <TimePicker
            android:id="@+id/endTimeTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@+id/titleEndTimeTextView" />

        <TextView
            android:id="@+id/titleEndTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Окончание рабочего дня:"
            android:theme="@style/titleTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTimeTimePicker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>